--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "SvelteComponent",
+  "name": "components",
   "svelte": "src/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
+    "prepare": "npm run build",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
