--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "components",
-  "svelte": "src/index.js",
-  "module": "dist/index.mjs",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "rollup -c",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run build"
-  },
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "rollup": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
-    "svelte": "^3.0.0"
-  },
-  "keywords": [
-    "svelte"
-  ],
-  "files": [
-    "src",
-    "dist"
-  ]
+	"name": "components",
+	"svelte": "src/index.js",
+	"module": "dist/index.mjs",
+	"main": "dist/index.js",
+	"scripts": {
+		"build": "rollup -c",
+		"prepare": "npm run build",
+		"prepublishOnly": "npm run build",
+		"lint": "prettier --check .",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@rollup/plugin-node-resolve": "^9.0.0",
+		"rollup": "^2.0.0",
+		"rollup-plugin-svelte": "^6.0.0",
+		"prettier": "~2.2.1",
+		"prettier-plugin-svelte": "^2.2.0",
+		"svelte": "^3.0.0"
+	},
+	"keywords": [
+		"svelte"
+	],
+	"files": [
+		"src",
+		"dist"
+	]
 }
