--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-node-resolve": "^9.0.0",
-		"rollup": "^2.0.0",
-		"rollup-plugin-svelte": "^6.0.0",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
+		"rollup": "^2.0.0",
+		"rollup-plugin-svelte": "^6.0.0",
 		"svelte": "^3.0.0"
 	},
 	"keywords": [
@@ -24,5 +24,8 @@
 	"files": [
 		"src",
 		"dist"
-	]
+	],
+	"dependencies": {
+		"svelte-click-outside": "^1.0.0"
+	}
 }
