--- a/package.json
+++ b/package.json
@@ -1,31 +1,55 @@
 {
-	"name": "components",
-	"svelte": "src/index.js",
-	"module": "dist/index.mjs",
-	"main": "dist/index.js",
-	"scripts": {
-		"build": "rollup -c",
-		"prepare": "npm run build",
-		"prepublishOnly": "npm run build",
-		"lint": "prettier --check .",
-		"format": "prettier --write ."
-	},
-	"devDependencies": {
-		"@rollup/plugin-node-resolve": "^9.0.0",
-		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.2.0",
-		"rollup": "^2.0.0",
-		"rollup-plugin-svelte": "^6.0.0",
-		"svelte": "^3.0.0"
-	},
-	"keywords": [
-		"svelte"
-	],
-	"files": [
-		"src",
-		"dist"
-	],
-	"dependencies": {
-		"svelte-click-outside": "^1.0.0"
-	}
+  "name": "components",
+  "svelte": "src/index.js",
+  "module": "dist/index.mjs",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "rollup -c",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
+    "lint": "prettier --check .",
+    "format": "prettier --write .",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/pluginutils": "4.1.0",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-backgrounds": "6.2.9",
+    "@storybook/addon-controls": "6.2.9",
+    "@storybook/addon-docs": "6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-postcss": "2.0.0",
+    "@storybook/addon-svelte-csf": "^1.0.0",
+    "@storybook/addon-toolbars": "^6.2.9",
+    "@storybook/addon-viewport": "^6.2.9",
+    "@storybook/svelte": "^6.2.9",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "postcss": "^8.2.14",
+    "postcss-import": "14.0.1",
+    "postcss-load-config": "3.0.1",
+    "prettier": "~2.2.1",
+    "prettier-plugin-svelte": "^2.2.0",
+    "rollup": "^2.0.0",
+    "rollup-plugin-svelte": "^6.0.0",
+    "svelte": "^3.38.2",
+    "svelte-hmr": "0.14.3",
+    "svelte-loader": "^3.1.1",
+    "svelte-preprocess": "4.7.3",
+    "tailwindcss": "^2.1.2"
+  },
+  "keywords": [
+    "svelte"
+  ],
+  "files": [
+    "src",
+    "dist"
+  ],
+  "dependencies": {
+    "svelte-click-outside": "^1.0.0"
+  }
 }
